--- a/Recipe/RecipeApp/RecipeApp/Base.lproj/Main.storyboard
+++ b/Recipe/RecipeApp/RecipeApp/Base.lproj/Main.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="6pK-HM-l80">
-                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <rect key="frame" x="1" y="64" width="598" height="536"/>
                                 <animations/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -33,8 +33,8 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="6pK-HM-l80" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="IWh-u1-ylM"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="6pK-HM-l80" secondAttribute="trailing" constant="-20" id="Itw-4A-q76"/>
-                            <constraint firstItem="6pK-HM-l80" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="WO0-F9-MOp"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="6pK-HM-l80" secondAttribute="trailing" constant="-19" id="Itw-4A-q76"/>
+                            <constraint firstItem="6pK-HM-l80" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-19" id="WO0-F9-MOp"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="6pK-HM-l80" secondAttribute="bottom" id="uM9-NK-qwR"/>
                             <constraint firstItem="6pK-HM-l80" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="xdJ-9h-Pd2"/>
                         </constraints>
@@ -76,14 +76,14 @@
                                     <constraint firstAttribute="width" constant="140" id="XLD-Xb-S70"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3bl-zt-Nn7">
-                                <rect key="frame" x="188" y="86" width="384" height="30"/>
+                                <rect key="frame" x="188" y="82" width="384" height="40"/>
                                 <animations/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="D2O-N6-Md3"/>
+                                    <constraint firstAttribute="height" constant="40" id="D2O-N6-Md3"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
@@ -92,22 +92,22 @@
                                 </connections>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Recipe Decription: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XDg-z2-iHa">
-                                <rect key="frame" x="28" y="144" width="152" height="21"/>
+                                <rect key="frame" x="28" y="124" width="152" height="21"/>
                                 <animations/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="152" id="cg5-gr-vci"/>
                                     <constraint firstAttribute="height" constant="21" id="kC6-uB-qzs"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="dB5-I7-aJh">
-                                <rect key="frame" x="28" y="179" width="544" height="163"/>
+                                <rect key="frame" x="28" y="159" width="544" height="120"/>
                                 <animations/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="163" id="8rw-za-0rk"/>
+                                    <constraint firstAttribute="height" constant="120" id="8rw-za-0rk"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -143,23 +143,50 @@
                                     <action selector="btnDelete:" destination="C7r-PM-dqX" eventType="touchUpInside" id="WM0-2t-2NM"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Recipe Type: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iBy-S9-6ai">
+                                <rect key="frame" x="28" y="302" width="152" height="21"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="152" id="vyW-yK-jgn"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="e0U-Dc-ssi">
+                                <rect key="frame" x="188" y="293" width="384" height="40"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="DrR-nC-Qx1"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="C7r-PM-dqX" id="3Jn-M7-Js1"/>
+                                </connections>
+                            </textField>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="iBy-S9-6ai" firstAttribute="top" secondItem="dB5-I7-aJh" secondAttribute="bottom" constant="23" id="0Uj-7b-mZh"/>
                             <constraint firstAttribute="trailingMargin" secondItem="dB5-I7-aJh" secondAttribute="trailing" constant="8" id="3MF-vu-5hr"/>
-                            <constraint firstItem="XDg-z2-iHa" firstAttribute="top" secondItem="T3A-zN-hS9" secondAttribute="bottom" constant="33" id="4aA-nk-gB5"/>
+                            <constraint firstItem="XDg-z2-iHa" firstAttribute="top" secondItem="T3A-zN-hS9" secondAttribute="bottom" constant="13" id="4aA-nk-gB5"/>
                             <constraint firstItem="dB5-I7-aJh" firstAttribute="leading" secondItem="A6G-7B-VZ6" secondAttribute="leadingMargin" constant="8" id="7Xp-Pb-b22"/>
+                            <constraint firstItem="e0U-Dc-ssi" firstAttribute="top" secondItem="dB5-I7-aJh" secondAttribute="bottom" constant="14" id="BnS-ql-G5d"/>
                             <constraint firstItem="XDg-z2-iHa" firstAttribute="leading" secondItem="A6G-7B-VZ6" secondAttribute="leadingMargin" constant="8" id="DO4-UD-yfg"/>
                             <constraint firstItem="ISn-id-Iri" firstAttribute="leading" secondItem="A6G-7B-VZ6" secondAttribute="leadingMargin" constant="15" id="DVu-KH-Q27"/>
                             <constraint firstItem="dB5-I7-aJh" firstAttribute="top" secondItem="XDg-z2-iHa" secondAttribute="bottom" constant="14" id="MDs-VN-vnl"/>
                             <constraint firstItem="3bl-zt-Nn7" firstAttribute="leading" secondItem="T3A-zN-hS9" secondAttribute="trailing" constant="20" id="PAG-lT-nXG"/>
                             <constraint firstItem="T3A-zN-hS9" firstAttribute="top" secondItem="917-kh-qML" secondAttribute="bottom" constant="26" id="VxC-UC-FtS"/>
                             <constraint firstAttribute="trailingMargin" secondItem="3bl-zt-Nn7" secondAttribute="trailing" constant="8" id="Yam-Go-A3M"/>
-                            <constraint firstItem="3bl-zt-Nn7" firstAttribute="top" secondItem="917-kh-qML" secondAttribute="bottom" constant="22" id="ZJa-QT-tuA"/>
+                            <constraint firstItem="3bl-zt-Nn7" firstAttribute="top" secondItem="917-kh-qML" secondAttribute="bottom" constant="18" id="ZJa-QT-tuA"/>
                             <constraint firstAttribute="trailingMargin" secondItem="yLu-7f-zeW" secondAttribute="trailing" constant="15" id="b46-8f-mXk"/>
                             <constraint firstItem="1D4-Pn-re0" firstAttribute="top" secondItem="yLu-7f-zeW" secondAttribute="bottom" constant="69" id="ck0-mt-1ku"/>
                             <constraint firstItem="1D4-Pn-re0" firstAttribute="top" secondItem="ISn-id-Iri" secondAttribute="bottom" constant="69" id="dGL-IA-gMt"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="e0U-Dc-ssi" secondAttribute="trailing" constant="8" id="fxe-7f-XRv"/>
+                            <constraint firstItem="iBy-S9-6ai" firstAttribute="leading" secondItem="A6G-7B-VZ6" secondAttribute="leadingMargin" constant="8" id="iJn-xQ-f5Y"/>
+                            <constraint firstItem="e0U-Dc-ssi" firstAttribute="leading" secondItem="iBy-S9-6ai" secondAttribute="trailing" constant="8" id="vcF-EA-aD1"/>
                             <constraint firstItem="T3A-zN-hS9" firstAttribute="leading" secondItem="A6G-7B-VZ6" secondAttribute="leadingMargin" constant="8" id="yAj-XC-qr9"/>
                         </constraints>
                     </view>
@@ -167,6 +194,7 @@
                     <connections>
                         <outlet property="tvRecipeDecription" destination="dB5-I7-aJh" id="QqY-hr-QnY"/>
                         <outlet property="txtRecipeName" destination="3bl-zt-Nn7" id="4kv-tC-Nik"/>
+                        <outlet property="txtRecipeType" destination="e0U-Dc-ssi" id="yFo-QI-6WH"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="F3C-AO-yat" userLabel="First Responder" sceneMemberID="firstResponder"/>
