--- a/Recipe/RecipeApp/RecipeApp/Base.lproj/Main.storyboard
+++ b/Recipe/RecipeApp/RecipeApp/Base.lproj/Main.storyboard
@@ -169,6 +169,7 @@
                                 <rect key="frame" x="0.0" y="343" width="600" height="257"/>
                                 <animations/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="sectionIndexBackgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
                                     <outlet property="dataSource" destination="C7r-PM-dqX" id="Mur-8V-h2b"/>
                                     <outlet property="delegate" destination="C7r-PM-dqX" id="ONK-01-wqt"/>
