--- a/Recipe/RecipeApp/RecipeApp/Base.lproj/Main.storyboard
+++ b/Recipe/RecipeApp/RecipeApp/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="b5y-CS-Cv7">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="QYa-NI-NO9">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
@@ -15,11 +15,11 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="548"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="6pK-HM-l80">
-                                <rect key="frame" x="1" y="64" width="598" height="536"/>
+                                <rect key="frame" x="20" y="44" width="560" height="504"/>
                                 <animations/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -33,8 +33,8 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="6pK-HM-l80" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="IWh-u1-ylM"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="6pK-HM-l80" secondAttribute="trailing" constant="-19" id="Itw-4A-q76"/>
-                            <constraint firstItem="6pK-HM-l80" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-19" id="WO0-F9-MOp"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="6pK-HM-l80" secondAttribute="trailing" id="Itw-4A-q76"/>
+                            <constraint firstItem="6pK-HM-l80" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="WO0-F9-MOp"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="6pK-HM-l80" secondAttribute="bottom" id="uM9-NK-qwR"/>
                             <constraint firstItem="6pK-HM-l80" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="xdJ-9h-Pd2"/>
                         </constraints>
@@ -55,7 +55,7 @@
                 <searchDisplayController id="Esc-t4-pCo"/>
                 <searchDisplayController id="uOP-gA-jsA"/>
             </objects>
-            <point key="canvasLocation" x="1070" y="742"/>
+            <point key="canvasLocation" x="1152" y="724"/>
         </scene>
         <!--Recipe Detail Controller-->
         <scene sceneID="hWY-9D-ykY">
@@ -166,7 +166,7 @@
                                 </connections>
                             </textField>
                             <tableView hidden="YES" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="wqc-bk-iA4">
-                                <rect key="frame" x="0.0" y="343" width="600" height="257"/>
+                                <rect key="frame" x="187" y="334" width="385" height="266"/>
                                 <animations/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <color key="sectionIndexBackgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -186,10 +186,10 @@
                             <constraint firstItem="e0U-Dc-ssi" firstAttribute="top" secondItem="dB5-I7-aJh" secondAttribute="bottom" constant="14" id="BnS-ql-G5d"/>
                             <constraint firstItem="XDg-z2-iHa" firstAttribute="leading" secondItem="A6G-7B-VZ6" secondAttribute="leadingMargin" constant="8" id="DO4-UD-yfg"/>
                             <constraint firstItem="ISn-id-Iri" firstAttribute="leading" secondItem="A6G-7B-VZ6" secondAttribute="leadingMargin" constant="15" id="DVu-KH-Q27"/>
-                            <constraint firstItem="wqc-bk-iA4" firstAttribute="leading" secondItem="A6G-7B-VZ6" secondAttribute="leadingMargin" constant="-20" id="HUy-vN-rqw"/>
+                            <constraint firstItem="wqc-bk-iA4" firstAttribute="leading" secondItem="A6G-7B-VZ6" secondAttribute="leadingMargin" constant="167" id="HUy-vN-rqw"/>
                             <constraint firstItem="dB5-I7-aJh" firstAttribute="top" secondItem="XDg-z2-iHa" secondAttribute="bottom" constant="14" id="MDs-VN-vnl"/>
                             <constraint firstItem="3bl-zt-Nn7" firstAttribute="leading" secondItem="T3A-zN-hS9" secondAttribute="trailing" constant="20" id="PAG-lT-nXG"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="wqc-bk-iA4" secondAttribute="trailing" constant="-20" id="T8I-fs-xM8"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="wqc-bk-iA4" secondAttribute="trailing" constant="8" id="T8I-fs-xM8"/>
                             <constraint firstItem="T3A-zN-hS9" firstAttribute="top" secondItem="917-kh-qML" secondAttribute="bottom" constant="26" id="VxC-UC-FtS"/>
                             <constraint firstAttribute="trailingMargin" secondItem="3bl-zt-Nn7" secondAttribute="trailing" constant="8" id="Yam-Go-A3M"/>
                             <constraint firstItem="3bl-zt-Nn7" firstAttribute="top" secondItem="917-kh-qML" secondAttribute="bottom" constant="18" id="ZJa-QT-tuA"/>
@@ -200,7 +200,7 @@
                             <constraint firstItem="iBy-S9-6ai" firstAttribute="leading" secondItem="A6G-7B-VZ6" secondAttribute="leadingMargin" constant="8" id="iJn-xQ-f5Y"/>
                             <constraint firstItem="1D4-Pn-re0" firstAttribute="top" secondItem="wqc-bk-iA4" secondAttribute="bottom" id="iYm-rv-23i"/>
                             <constraint firstItem="e0U-Dc-ssi" firstAttribute="leading" secondItem="iBy-S9-6ai" secondAttribute="trailing" constant="8" id="vcF-EA-aD1"/>
-                            <constraint firstItem="wqc-bk-iA4" firstAttribute="top" secondItem="e0U-Dc-ssi" secondAttribute="bottom" constant="10" id="x28-Jh-yE6"/>
+                            <constraint firstItem="wqc-bk-iA4" firstAttribute="top" secondItem="e0U-Dc-ssi" secondAttribute="bottom" constant="1" id="x28-Jh-yE6"/>
                             <constraint firstItem="T3A-zN-hS9" firstAttribute="leading" secondItem="A6G-7B-VZ6" secondAttribute="leadingMargin" constant="8" id="yAj-XC-qr9"/>
                         </constraints>
                     </view>
@@ -214,7 +214,67 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="F3C-AO-yat" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1742" y="745"/>
+            <point key="canvasLocation" x="1778" y="750"/>
+        </scene>
+        <!--Main Controller-->
+        <scene sceneID="N6T-tw-15h">
+            <objects>
+                <viewController storyboardIdentifier="MainController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="QYa-NI-NO9" customClass="MainController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="SQi-zP-iDY"/>
+                        <viewControllerLayoutGuide type="bottom" id="BxZ-Za-Xt8"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="PPf-eL-N0H">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xQj-c7-kfu">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="54"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Df-38-xN4">
+                                        <rect key="frame" x="244" y="20" width="112" height="34"/>
+                                        <animations/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="34" id="WBY-Um-6pp"/>
+                                            <constraint firstAttribute="width" constant="112" id="XAJ-9O-028"/>
+                                        </constraints>
+                                        <state key="normal" title="LOGO">
+                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="deviceRGB"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                                <animations/>
+                                <color key="backgroundColor" red="0.64214409722222221" green="0.36748947417670369" blue="0.01380642089002105" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="3Df-38-xN4" firstAttribute="top" secondItem="xQj-c7-kfu" secondAttribute="top" constant="20" id="1e3-1p-0g3"/>
+                                    <constraint firstItem="3Df-38-xN4" firstAttribute="centerX" secondItem="xQj-c7-kfu" secondAttribute="centerX" id="cP1-uj-z2X"/>
+                                    <constraint firstAttribute="height" constant="54" id="ntg-mA-SUR"/>
+                                </constraints>
+                            </view>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WwN-4L-xAz">
+                                <rect key="frame" x="0.0" y="52" width="600" height="548"/>
+                                <animations/>
+                                <connections>
+                                    <segue destination="b5y-CS-Cv7" kind="embed" id="kkY-g6-l4w"/>
+                                </connections>
+                            </containerView>
+                        </subviews>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="xQj-c7-kfu" firstAttribute="top" secondItem="PPf-eL-N0H" secondAttribute="topMargin" id="Buu-Fi-GFI"/>
+                            <constraint firstItem="WwN-4L-xAz" firstAttribute="top" secondItem="xQj-c7-kfu" secondAttribute="bottom" constant="-2" id="CMT-lh-tEc"/>
+                            <constraint firstItem="xQj-c7-kfu" firstAttribute="leading" secondItem="PPf-eL-N0H" secondAttribute="leadingMargin" constant="-20" id="OX2-Yv-hKd"/>
+                            <constraint firstItem="BxZ-Za-Xt8" firstAttribute="top" secondItem="WwN-4L-xAz" secondAttribute="bottom" id="b0N-x3-0mS"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="WwN-4L-xAz" secondAttribute="trailing" constant="-20" id="cJ8-Ta-HDw"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="xQj-c7-kfu" secondAttribute="trailing" constant="-20" id="d5R-zB-32u"/>
+                            <constraint firstItem="WwN-4L-xAz" firstAttribute="leading" secondItem="PPf-eL-N0H" secondAttribute="leadingMargin" constant="-20" id="kPe-F8-v4D"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yde-3c-yul" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-257" y="742"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="rt7-Rb-fgi">
@@ -233,7 +293,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2JN-BZ-Qva" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="440" y="742"/>
+            <point key="canvasLocation" x="422" y="724"/>
         </scene>
     </scenes>
 </document>
